[Mac] Unreviewed test fix after r182584 https://bugs.webkit.org/show_bug.cgi?id=143452

Source/WebCore:

Correct bit comparison to use the correct value for the Control-key

* platform/mac/PlatformEventFactoryMac.mm:
(WebCore::typeForEvent):

Source/WebKit2:

Correct bit comparison to use the correct value for the Control-key

* Shared/mac/WebEventFactory.mm:
(WebKit::typeForEvent):

Tools:

Put both of these tests back to their original state now that the underlying
problem is fixed.

* TestWebKitAPI/Tests/WebKit2/MenuTypesForMouseEvents.cpp:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/mac/MenuTypesForMouseEvents.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/161587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182589 268f45cc-cd09-0410-ab3c-d52691b4dbfc