Source/WebCore/platform/mac/PlatformEventFactoryMac.mm
@@ -403,7 +403,7 @@ static int typeForEvent(NSEvent *event)
     if (mouseButtonForEvent(event) == RightButton)
         return static_cast<int>(NSMenuTypeContextMenu);
 
-    if (mouseButtonForEvent(event) == LeftButton && (modifiersForEvent(event) & NSControlKeyMask))
+    if (mouseButtonForEvent(event) == LeftButton && (modifiersForEvent(event) & PlatformEvent::CtrlKey))
         return static_cast<int>(NSMenuTypeContextMenu);
 
     return static_cast<int>(NSMenuTypeNone);
